New utility validation fns
- verify_by - updated - can select which 'by' inputs function accepts, or if it is required, plus output a custom message
- column.val - for inputs which take column numbers
- input.val - for other input validations


========================== inspect() ============================
Changes

- NEW: added `width` input for rolling reg plot (default 0.1)
- CHANGE: updated roxygen docs. There was quite a lot out of date...
- CHANGE: Added message if multiple columns inspected that subsequent functions will only use first 2 by default
- CHANGE: Multiple rate inspection plot improved. Now all plot on same axes ranges, better colours and spacing.
- FIX: Rolling rate plot failed with even a single NA in time or oxygen data.
- CHANGE: Prints NA locations for all oxygen columns they are found in (previously only printed if a 2-col df)
- CHANGE: If multiple columns in df input, warning that 1:2 used by default.
- CHANGE: Stops if 'oxygen' or 'time' columns not present in the input
- CHANGE: Stops if 'oxygen' and 'time' columns conflict
- FIX: Fix for points sometimes being plotted twice slightly offset in big datasets.
- CHANGE: Can pass 'rate.rev = FALSE' to plot rates not reversed (for oxygen production respirometry)
- CHANGE: Can pass 'legend = FALSE' to plot to suppress legend
- CHANGE: prints on assigning when issues are found
- CHANGE: output has additional elements `$call` and `$inputs`
- CHANGE: output `$list` and `$list_raw` renamed `locs` and `$locs_raw`


========================== S3 Methods ============================

All
- Made inputs consistent (for .summary first input should be 'object', all others 'x' or causes CMD check error)
- All summary S3 have `export = TRUE` for export of summary table/value
- Added `return(invisible(object))` where missing to allow piping
- All stop if 'pos' too high
- All print much better with nicer spacing, especially in pipes