@@ -38,6 +38,8 @@ S3method(summary,calc_rate)
 S3method(summary,calc_rate.ft)
 S3method(summary,convert_rate)
 S3method(summary,convert_rate.ft)
+S3method(summary,inspect)
+S3method(summary,inspect.ft)
 S3method(summary,pcrit)
 export("%>%")
 export(adjust_rate)
